--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>SISTEM  INFORMASI PETERNAKAN IKAN </title>
+    <title>SISTEM  INFORMASI BUDIDAYA IKAN SUNGAI </title>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/freelancer.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/leaflet.css" />
@@ -33,7 +33,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">SISTEM INFORMASI PETERNAKAN IKAN</a>
+                <a class="navbar-brand" href="#page-top">SISTEM INFORMASI Budidaya IKAN SUNGAI</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -58,7 +58,7 @@
     <header>
             <div class="row">
                 <div class="col-lg-12">
-                    <img style="width:100%;margin:100px 0px 0px 0px;" src="img/profil3.jpg" alt="">
+                    <img style="width:100%;margin:20px 0px 0px 0px;" src="img/profil1.jpg" alt="">
                 </div>
             </div>
     </header>
@@ -331,6 +331,7 @@
                         <h3>Lokasi</h3>
                         <p>Jalan. Yos sudarso RT 19, Desa Loa Kulu Kota Kec Loa Kulu, Kutai Kartanegara
                             <br>Kalimantan Timur 75124</p>
+							<p><br>081258128062</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Media Sosial</h3>
@@ -350,7 +351,7 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Aplikasi Informasi Perikanan</h3>
+                        <h3>Aplikasi Informasi Budidaya Ikan Sungai</h3>
                         <p>Sistem informasi tentang pembudidayaan ikan konsumsi.</p>
                     </div>
                 </div>
@@ -389,7 +390,7 @@
                             <h2 align="center">Profil</h2>
                             <hr class="star-primary">
                             <img src="img/foto.jpg" class="img-responsive img-centered" alt="">
-                            <p style="text-align:justify">Tahun didirikannya usaha keramba yaitu pada tahun 2000, awalnya hanya menjadi karyawan keramba 3 tahun setelah beberapa tahun kemudian kaka saya memberi modal untuk mebuka keramba sendiri  </p>
+                            <p style="text-align:justify">Tahun awal di dirikannya usaha keramba ikan sungai pada tahun 2000 awal mula terpikirkannya ingin membuka usaha adalah dulu suami saya hanya menjadi karyawan keramba selama 3 Tahun lamanya setelah itu kaka menyuruh kami untuk mencoba memulai buka keramba awalnya hanya berkisar 4 kotak keramba dan modalnya pun kaka juga yang modalin. setelah itu kami membeli bibit ikan dan membudidayakan dari bibit ikan itu kami merawat hingga bisa di jual di pasar. </p>
                             <h4 align="center">Tujuan</h4>
 							<hr class="star-primary">
 							<p style="text-align:justify">bekerja untuk menjadikan usha maju.</p>
